--- a/.templates/app/app.html
+++ b/.templates/app/app.html
@@ -13,7 +13,7 @@
 
             display: flex;
             flex-direction: column;
-            justify-content: center;
+            justify-content: space-around;
             align-items: center;
         }
 
@@ -22,13 +22,28 @@
         }
 
         .panel {
-            border: 3px dashed #1B1B37
+            padding: 8px;
+
+            border: 3px dashed #1B1B37;
+            border-radius: 24px;
+        }
+
+        .panel-section {
+            padding: 8px;
+
+            border: 1px solid #1B1B37;
+            border-radius: 16px;
+        }
+
+        .panel-section:not(:last-child) {
+            margin-bottom: 8px;
         }
 
         input[type=text], input[type=file], input[type=submit] {
             background-color: #F1F1F8;
 
-            border: 1px solid #1B1B37
+            border: 1px solid #1B1B37;
+            border-radius: 8px;
         }
     </style>
 </head>
