--- a/.templates/app/welcome.html
+++ b/.templates/app/welcome.html
@@ -1,24 +1,25 @@
 {{define "welcome"}}
 <div id="welcome-page">
-    <h1>Welcome Page</h1>
+    <h1>welcome page</h1>
 
     <div class="panel">
         <div class="panel-section" id="create-project-form">
-            <h2>create project</h2>
+            <h2>create</h2>
 
             <form hx-post="/project/create"
                 hx-trigger="submit"
                 hx-target="#welcome-page"
                 hx-swap="outerHTML">
                     <input type="text" name="project-name" placeholder="project name" />
+
                     <input type="submit" name="project-submit" value="create project" />
             </form>
 
-            <h4 class="error"> {{.CreateError}}</h4>
+            <h6 class="error">{{.CreateError}}</h6>
         </div>
 
         <div class="panel-section" id="open-project-form">
-            <h2>open project</h2>
+            <h2>open</h2>
 
             <form hx-post="/project/open"
                 hx-trigger="submit"
@@ -26,10 +27,11 @@
                 hx-swap="outerHTML"
                 enctype="multipart/form-data">
                     <input type="file" name="project-file" />
+
                     <input type="submit" name="open-project" value="open project" />
             </form>
 
-            <h4 class="error"> {{.OpenError}}</h4>
+            <h6 class="error">{{.OpenError}}</h6>
         </div>
     </div>
 </div>
